--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
 
-title: Catbook #Your awesome title
-email: #youremail@domain.com
-description: > # this means to ignore newlines until "baseurl"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: DEVLOG
+email: hyjhyj0901@naver.com
+description: > 
+  uzun's devlog
 
 baseurl: # the subpath of the site
-url: http://starry99.github.io/catbook # the base hostname & protocol for your site
+url: http://kick-snare.github.io # the base hostname & protocol for your site
 
 permalink: /:year-:month/:title
 timezone:
@@ -18,7 +16,7 @@ google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: #disqus shortname
 
 user:
-  name: Catbook
+  name: uzun.dev
   pic: /assets/img/cat.jpg
   picAlt: "catbook"
   job: a category-centric theme
